@@ -165,7 +165,7 @@
                             <br />
                         -->
                             <img height="16" width="16" title="vCal export" alt="" tal:attributes="src string:${here/portal_url}/icon_export_ical.png"/>
-                            <a href="./ics_view" title="vCal" i18n:translate="">
+                            <a href="./export_ics" title="vCal" i18n:translate="">
                                 iCal
                             </a>
                         </td>
