@@ -5,6 +5,9 @@ Changelog
 1.3.2 (unreleased)
 ------------------
 
+- Export ICS: show attendees.
+  [Julian Infanger]
+
 - Show location in meeting view.
   [Julian Infanger]
 
